temp fix for overlay scrollbar

--- a/chrome/skin/common/scrollbars.css
+++ b/chrome/skin/common/scrollbars.css
@@ -47,3 +47,10 @@ html:not(#main-window)[tabGroups_UUID][tabGroups_Version] body:not([lwtheme]):no
 html:not(#main-window)[tabGroups_UUID][tabGroups_Version] body[lwtheme] #groupSelector[brighttext] scrollbar thumb {
 	background-color: rgba(245,245,245,0.65) !important;
 }
+
+/* This is temp fix for overlay scrollbar not reappear on tabview*/
+@media (-moz-overlay-scrollbars) {
+	html:not(#main-window)[tabGroups_UUID][tabGroups_Version] scrollbar:not([active="true"]){
+	  -moz-appearance: none;
+	}
+  }
